filters and preview

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <title>Boda Violeta & Carlos</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Boda Violeta & Carlos">
+    <meta property="og:description" content="¡Los esperamos!">
+    <meta property="og:image" content="assets/images/savethedate.jpg">
     <link rel="icon" type="image/x-icon" href="assets/images/icons/cvlogo.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
