meta tags again an photo

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Boda Violeta & Carlos" />
     <meta property="og:site_name" content="Boda Violeta & Carlos" />
-    <meta property="og:description" content="¡Los esperamos!" />
+    <meta
+      property="og:description"
+      content="Celebra con nosotros este 23 de Septiembre en el JW Marriot nuestra Boda ¡Los esperamos!"
+    />
     <meta
       property="og:image"
       itemprop="image"
-      content="assets/images/savethedate.jpg"
+      content="https://violetaycarlos.com/assets/images/savethedate.jpg"
     />
     <meta property="og:type" content="website" />
     <link
