--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
       itemprop="image"
       content="https://violetaycarlos.com/assets/images/savethedate.jpg"
     />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
     <meta property="og:type" content="website" />
     <link
       rel="icon"
